<resources>
    <string name="app_name">SelFel</string>
    <string name="background">background</string>
    <string name="selfel">NOACTIONBAR</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="close">close</string>
    <string name="test_data">This assessment asks about your general health lifestyle,feelings and habits to understands more about your wellbeing. Find out what areas of your habits you should focus on.</string>
    <string name="tellme">SELFEL is a friend for every human that focuses on enhancing their lifestyle in order to divide stress and multiply happiness.
SELFEL is not just an app but a treatment for every individual that faces the problem of stress.</string>

    <string name="data"> Stress is a mental health condition that\'s triggered by a terrifying event — either experiencing it or witnessing it. Symptoms may include flashbacks, nightmares and severe anxiety, as well as uncontrollable thoughts about the event.

Most people who go through traumatic events may have temporary difficulty adjusting and coping, but with time and good self-care, they usually get better. If the symptoms get worse, last for months or even years, and interfere with your day-to-day functioning, you may have PTSD.

Getting effective treatment after stress symptoms develop can be critical to reduce symptoms and improve function.</string>

    <string name="menu_home">Home</string>
    <string name="mob_no">Mobile Number</string>
    <string name="login_tite">Login</string>
    <string name="continue_login_msg">To Continue your account !</string>
    <string name="sign_in_title">Sign In</string>
    <string name="dont_account_msg">Don\'t have an account?</string>
    <string name="create_account_msg">CreateAccount</string>
    <string name="sign_up">Sign Up</string>
    <string name="existing_user">Already have an Account !</string>
    <string name="register_culmyca">Register for Culmyca 20!</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="sign_out">Log Out</string>
    <string name="please_wait">Wait</string>
    <string name="sign_Guest">Sign In As  a Guest</string>
    <string name="events">Events</string>
    <string name="culmyca">EC-2k20</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="open">open</string>
    <string name="Question_1">Question 1</string>

    <string name="Question_2">Question 2</string>
    <string name="Question_3">Question 3</string>
    <string name="Question_4">Question 4</string>
    <string name="Question_5">Question 5</string>
    <string name="Question_6">Question 6</string>
    <string name="Question_7">Question 7</string>
    <string name="Question_8">Question 8</string>
    <string name="Question_9">Question 9</string>
    <string name="Question_10">Question 10</string>
    <string name="title_activity_web_view">WebView</string>


    <string name="picture">Picture</string>
    <string name="help_text">
      <b>HDR Viewfinder Demo:</b>\n\n

      Tap viewfinder to switch modes.\n\n

      <b>Normal:</b> Standard camera preview\n
      <b>Split:</b> Manual exposure control\n
      <b>HDR:</b> Fused HDR viewfinder\n\n

      Swipe up/down in Split/HDR modes to change manual exposure
      values.\n\n

      The left half of the viewfinder controls exposure time for
      even-numbered frames, and the right half of the viewfinder
      controls exposure time for odd-numbered frames
    </string>

    <string name="info">Info</string>

    <string name="camera_permission_rationale">This sample app requires camera access in order to
        demo the API.</string>
    <string name="camera_no_good">No back-facing sufficiently capable camera available!</string>
    <string name="camera_disabled">Camera is disabled by device policy</string>
    <string name="camera_disconnected">Camera was disconnected before it was opened</string>
    <string name="camera_error">Camera service reported an error</string>
    <string name="camera_unknown">Unknown camera error: %s</string>
    <string name="camera_permission_denied_explanation">You\'ve denied a permission that the app
        needs for core functionality. If you selected &quot;don\'t ask again&quot; in the past then
        you need to use Settings to re-enable the permission.</string>

    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="toggle_turn_on">Front</string>
    <string name="toggle_turn_off">Back</string>
    <string name="desc_camera_source_activity">Real-time Face Detection: MLKIT</string>
    <string name="desc_still_image_activity">Vision detectors demo with a still image</string>
    <string name="well">Welcome to SelFel !!</string>


</resources>
