<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgd"

    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="30dp"
        android:layout_weight="1"
        android:paddingTop="30dp"
        android:src="@drawable/ec_logo" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/register_culmyca"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"

        android:layout_marginRight="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Full Name"
            android:textColor="@color/white"
            app:hintAnimationEnabled="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_college"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="College"
            android:textColor="@color/white"
            app:hintAnimationEnabled="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_email"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            app:hintAnimationEnabled="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:counterOverflowTextAppearance="@style/CounterOverFlow"
        app:hintTextAppearance="@color/light_blue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/white"
            android:hint="Mobile Number"
            android:inputType="number"
            app:hintAnimationEnabled="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_signUp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:layout_weight="0.45"
        android:background="@drawable/round_button"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/skip_signup"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="0.4"
        android:text="@string/sign_Guest"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_marginBottom="30dp"
        android:layout_weight="1"
        android:gravity="bottom">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1.2"
            android:gravity="center"
            android:text="@string/existing_user"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/open_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginRight="20dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/login_tite"
            android:textColor="@color/light_blue"
            android:textSize="18dp" />

    </LinearLayout>

</LinearLayout>